Desenvolvimentos área de projetos

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 </div>
         </head>
 
-        <div class="sidebar">
+        <aside class="sidebar">
             <nav>
                 <ul class="menu">
                     <li class="menu-item"><a href="#" class="menu-link">Home</a></li>
@@ -48,7 +48,126 @@
                 <a href="#"><i class="fab fa-github-alt"></i></a>
                 <a href="#"><i class="fab fa-twitter"></i></a>
             </div>
-        </div>
+        </aside>
+        <section class="sessao-conhecimentos">
+            <div class="sessao-header">
+                <h1>Conhecimentos</h1>
+            </div>
+            <div class="conhecimentos">
+                <div class="conhecimento">
+                    <div class="conhecimento-header">
+                        <i class="fab fa-html5"></i>
+                        <h3>HTML</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                        <p>O HTML é o componente básico da web, ele permite inserir o 
+                            conteúdo e estabelecer a estrutura básica de um website.</p>
+                    </div>
+                </div>
+                <div class="conhecimento">
+                    <div class="conhecimento-header">
+                        <i class="fab fa-css3-alt"></i>
+                        <h3>CSS</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                        <p>CSS é chamado de linguagem Cascading Style Sheet e é usado para estilizar elementos 
+                            escritos em uma linguagem de marcação como HTML..</p>
+                    </div>
+                </div>
+                <div class="conhecimento">
+                    <div class="conhecimento-header">
+                        <i class="fas fa-pencil-alt"></i>
+                        <h3>Designer</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                        <p>o Web Designer é o responsável pelo design (visual) da aplicação web, seja ela um website, 
+                            um CRM, um LMS, um app mobile, enfim, são inúmeras possibilidades. </p>
+                    </div>
+                </div>
+                <div class="conhecimento">
+                    <div class="conhecimento-header">
+                        <i class="fab fa-js"></i>
+                        <h3>Javascript</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                        <p>vaScript é uma linguagem de programação que permite a você implementar itens complexos 
+                            em páginas web  </p>
+                    </div>
+                </div>
+                <div class="conhecimento">
+                    <div class="conhecimento-header">
+                        <i class="fab fa-bootstrap"></i>
+                        <h3>Boostrap</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                        <p>O Bootstrap nada mais é que um framework Front End utilizados por milhares de 
+                            desenvolvedores web pelo mundo. </p>
+                    </div>
+                </div>
+                <div class="conhecimento">
+                    <div class="conhecimento-header">
+                        <i class="fab fa-github"></i>
+                        <h3>Git e GitHub</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                        <p>O Github é um serviço online de hospedagem de repositórios Git (como são chamados 
+                            os projetos que utilizam Git).</p>
+                    </div>
+                </div>
+                <div class="conhecimentos-img-wrapper">
+                    <img src="imagens/conhecimentos.png" alt="imagem conhecimento" >
+                </div>
+            </div>
+        </section>
+
+        <section class="sessao-projetos">
+            <div class="sessao-header">
+                <h1>Projetos</h1>
+            </div>
+            <div class="projetos">
+                <div class="card">
+                    <div class="card-img-wrapper">
+                    <img src="imagens/proj1.jpg" alt="imagem do projeto ToDO"/>
+                </div>
+                    <div class="card-info">
+                        <h2> ToDO List</h2>
+                        <h3>JavaScript</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                            Perspiciatis eligendi beatae atque aut, perferendis sapiente 
+                            est hic praesentium dicta consequatur? Ullam voluptatum at quae 
+                            id non? Accusamus velit ipsam numquam?</p>
+                        <button>Saiba Mais</button>
+                    </div>
+                    </div>
+                    <div class="card">
+                    <div class="card-img-wrapper">
+                        <img src="imagens/proj2.jpg" alt="imagemdo projeto Maratona"/>
+                    </div>
+                    <div class="card-info">
+                        <h2>Maratona</h2>
+                        <h3>HTML, CSS</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                            Accusamus distinctio, voluptas cum laboriosam quas delectus 
+                            repellendus porro alias voluptates voluptate cumque atque architecto 
+                            ipsa debitis facere fuga soluta ratione sapiente.</p>
+                        <button>Saiba Mais</button>
+                    </div>
+                    </div>
+                    <div class="card">
+                    <div class="card-img-wrapper">
+                        <img src="imagens/proj3.jpg" alt="imagem do projeto Casa Bela"/>
+                    </div>
+                    <div class="card-info">
+                        <h2>Casa Bela</h2>
+                        <h3>HTML</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                            Debitis laudantium tempora accusamus dolorum fuga maiores laborum esse, 
+                            sit incidunt, unde hic, quos assumenda obcaecati. Ratione inventore beatae rerum vitae debitis?</p>
+                        <button>Saiba Mais</button>
+                    </div>
+                </div>
+            </div>
+        </section>
 
     </div>
 </body>
